added credentials form password privacy

--- a/templates/credentials.html
+++ b/templates/credentials.html
@@ -16,7 +16,7 @@
         <tr>
             <td>{{ credential.id }}</td>
             <td>{{ credential.uname }}</td>
-            <td>{{ credential.pw }}</td>
+            <td>********</td>
             <td>{{ 'Yes' if credential.pwexpiry else 'No' }}</td>
         </tr>
         {% endfor %}
@@ -26,11 +26,15 @@
 <form id="credentialForm" class="mb-4">
     <div class="mb-3">
         <label for="uname" class="form-label">Username</label>
-        <input type="text" class="form-control" id="uname" name="uname" required>
+        <input type="text" class="form-control w-25" id="uname" name="uname" required>
     </div>
-    <div class="mb-3">
-        <label for="pw" class="form-label">Password</label>
-        <input type="text" class="form-control" id="pw" name="pw" required>
+    <div class="mb-3 position-relative">
+        <label for="pw" class="form-label">Password<button type="button"
+                class="btn btn-outline-secondary toggle-password" style="border: none;">
+                <i class="bi bi-eye"></i>
+            </button></label>
+        <input type="password" class="form-control w-25 me-2" id="pw" name="pw" required>
+
     </div>
     <div class="mb-3">
         <input type="checkbox" id="pwexpiry" name="pwexpiry">
@@ -57,6 +61,18 @@
                     alert('Error adding credentials');
                 }
             });
+        });
+        // Toggle password visibility
+        $('.toggle-password').click(function () {
+            const passwordInput = $('#pw');
+            const icon = $(this).find('i');
+            if (passwordInput.attr('type') === 'password') {
+                passwordInput.attr('type', 'text');
+                icon.removeClass('bi-eye').addClass('bi-eye-slash');
+            } else {
+                passwordInput.attr('type', 'password');
+                icon.removeClass('bi-eye-slash').addClass('bi-eye');
+            }
         });
     });
 </script>
