--- a/templates/credentials.html
+++ b/templates/credentials.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Credentials{% endblock %}
 {% block content %}
-<h1>Known SSH Credentials</h1>
+<h1>SSH Credentials</h1>
 <table class="table">
     <thead>
         <tr>
@@ -9,6 +9,7 @@
             <th>Username</th>
             <th>Password</th>
             <th>Expires?</th>
+            <th>Remove</th>
         </tr>
     </thead>
     <tbody>
@@ -18,6 +19,12 @@
             <td>{{ credential.uname }}</td>
             <td>********</td>
             <td>{{ 'Yes' if credential.pwexpiry else 'No' }}</td>
+            <td>
+                <button class="delete-credential" data-id="{{ credential.id }}"
+                    style="background: none; border: none; padding: 0;">
+                    <i class="fas fa-trash-alt"></i>
+                </button>
+            </td>
         </tr>
         {% endfor %}
     </tbody>
@@ -40,7 +47,7 @@
         <input type="checkbox" id="pwexpiry" name="pwexpiry">
         <label for="pwexpiry">Password expires?</label>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Save Credentials</button>
 </form>
 {% endblock %}
 {% block scripts %}
@@ -72,6 +79,24 @@
             } else {
                 passwordInput.attr('type', 'password');
                 icon.removeClass('bi-eye-slash').addClass('bi-eye');
+            }
+        });
+
+        // Delete credential
+        $('.delete-credential').click(function () {
+            const credentialId = $(this).data('id');
+            if (confirm('Are you sure you want to delete this credential?')) {
+                $.ajax({
+                    url: '/delete_credential/' + credentialId,
+                    type: 'POST',
+                    success: function (response) {
+                        alert(response.message);
+                        location.reload();
+                    },
+                    error: function () {
+                        alert('Error deleting credential');
+                    }
+                });
             }
         });
     });
