--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -5,7 +5,7 @@
             <a class="nav-link text-white" href="{{ url_for('credentials') }}">Credentials</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="{{ url_for('devices') }}">Devices</a>
+            <a class="nav-link text-white" href="{{ url_for('device_list') }}">Devices</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-white" href="{{ url_for('tests') }}">Tests</a>
