add BGP as-path tests page now works (except deletion of tests)

--- a/static/style.css
+++ b/static/style.css
@@ -29,3 +29,25 @@
     color: red;
     /* Change color on hover */
 }
+
+.delete-device i {
+    cursor: pointer;
+    color: #000;
+    /* Default color */
+}
+
+.delete-device:hover i {
+    color: red;
+    /* Change color on hover */
+}
+
+.delete-test i {
+    cursor: pointer;
+    color: #000;
+    /* Default color */
+}
+
+.delete-test:hover i {
+    color: red;
+    /* Change color on hover */
+}
