--- a/templates/credentials.html
+++ b/templates/credentials.html
@@ -31,6 +31,7 @@
 </table>
 <h2>Add Credentials</h2>
 <form id="credentialForm" class="mb-4">
+    {{ form.hidden_tag() }}
     <div class="mb-3">
         <label for="uname" class="form-label">Username</label>
         <input type="text" class="form-control w-25" id="uname" name="uname" required>
@@ -60,6 +61,9 @@
                 url: '/credentials',
                 type: 'POST',
                 data: $(this).serialize(),
+                headers: {
+                    'X-CSRFToken': $('meta[name="csrf-token"]').attr('content')  // Include CSRF token
+                },
                 success: function (response) {
                     alert(response.message);
                     location.reload();
@@ -89,6 +93,9 @@
                 $.ajax({
                     url: '/delete_credential/' + credentialId,
                     type: 'POST',
+                    headers: {
+                        'X-CSRFToken': $('meta[name="csrf-token"]').attr('content')  // Include CSRF token
+                    },
                     success: function (response) {
                         alert(response.message);
                         location.reload();
