--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     {% block scripts %}{% endblock %}
 </body>
 
