--- a/templates/addtest_bgpaspath.html
+++ b/templates/addtest_bgpaspath.html
@@ -9,26 +9,38 @@
     {{ form.hidden_tag() }}
 
     <div class="mb-3">
-        <label for="test_device_hostname" class="form-label">Device to test from</label>
-        {{ form.test_device_hostname(class="form-control w-25") }}
+        {{ form.test_device_hostname.label(class="form-label") }}
+        {{ form.test_device_hostname(class="form-select w-25") }}
         {% if form.test_device_hostname.errors %}
-        <div class="text-danger">{{ form.test_device_hostname.errors[0] }}</div>
+        <div class="text-danger">
+            {% for error in form.test_device_hostname.errors %}
+            {{ error }}<br>
+            {% endfor %}
+        </div>
         {% endif %}
     </div>
 
     <div class="mb-3">
-        <label for="test_testprefix" class="form-label">Prefix to check</label>
-        <input type="text" class="form-control w-25" id="test_testprefix" name="test_testprefix" required>
+        {{ form.test_testprefix.label(class="form-label") }}
+        {{ form.test_testprefix(class="form-control w-25") }}
         {% if form.test_testprefix.errors %}
-        <div class="text-danger">{{ form.test_testprefix.errors[0] }}</div>
+        <div class="text-danger">
+            {% for error in form.test_testprefix.errors %}
+            {{ error }}<br>
+            {% endfor %}
+        </div>
         {% endif %}
     </div>
 
     <div class="mb-3">
-        <label for="test_checkASinpath" class="form-label">ASN to check for</label>
-        <input type="text" class="form-control w-25" id="test_checkASinpath" name="test_checkASinpath" required>
+        {{ form.test_checkASinpath.label(class="form-label") }}
+        {{ form.test_checkASinpath(class="form-control w-25") }}
         {% if form.test_checkASinpath.errors %}
-        <div class="text-danger">{{ form.test_checkASinpath.errors[0] }}</div>
+        <div class="text-danger">
+            {% for error in form.test_checkASinpath.errors %}
+            {{ error }}<br>
+            {% endfor %}
+        </div>
         {% endif %}
     </div>
 
@@ -45,14 +57,18 @@
     </div>
 
     <div class="mb-3">
-        <label for="test_testtext" class="form-label">Purpose of this test</label>
-        <input type="text" class="form-control w-25" id="test_testtext" name="test_testtext">
+        {{ form.test_testtext.label(class="form-label") }}
+        {{ form.test_testtext(class="form-control w-25") }}
         {% if form.test_testtext.errors %}
-        <div class="text-danger">{{ form.test_testtext.errors[0] }}</div>
+        <div class="text-danger">
+            {% for error in form.test_testtext.errors %}
+            {{ error }}<br>
+            {% endfor %}
+        </div>
         {% endif %}
     </div>
 
-    <button type="submit" class="btn btn-primary">Save Test</button>
+    {{ form.submit(class="btn btn-primary") }}
 </form>
 
 {% endblock %}
