refactored app context to work with socketio background tasks

--- a/templates/test_progress.html
+++ b/templates/test_progress.html
@@ -30,6 +30,7 @@
 
     // Listen for status updates
     socket.on('status_update', function (data) {
+        console.log('Received:', data);
         if (data.run_id === currentRunId) {  // Compare with predefined variable
             const log = document.getElementById('status-log');
             log.innerHTML += '<p>' + data.message + '</p>';
