--- a/templates/credentials.html
+++ b/templates/credentials.html
@@ -16,9 +16,9 @@
         {% for credential in credentials %}
         <tr>
             <td>{{ credential.id }}</td>
-            <td>{{ credential.uname }}</td>
+            <td>{{ credential.username }}</td>
             <td>********</td>
-            <td>{{ 'Yes' if credential.pwexpiry else 'No' }}</td>
+            <td>{{ 'Yes' if credential.passwordexpiry else 'No' }}</td>
             <td>
                 <button class="delete-credential" data-id="{{ credential.id }}"
                     style="background: none; border: none; padding: 0;">
@@ -32,23 +32,40 @@
 <h2>Add Credentials</h2>
 <form id="credentialForm" class="mb-4">
     {{ form.hidden_tag() }}
+
     <div class="mb-3">
-        <label for="uname" class="form-label">Username</label>
-        <input type="text" class="form-control w-25" id="uname" name="uname" required>
+        {{ form.username.label(class="form-label") }}
+        {{ form.username(class="form-control w-25") }}
+        {% if form.username.errors %}
+        <div class="text-danger">
+            {% for error in form.username.errors %}
+            {{ error }}<br>
+            {% endfor %}
+        </div>
+        {% endif %}
     </div>
+
     <div class="mb-3 position-relative">
         <label for="pw" class="form-label">Password<button type="button"
                 class="btn btn-outline-secondary toggle-password" style="border: none;">
                 <i class="bi bi-eye"></i>
             </button></label>
-        <input type="password" class="form-control w-25 me-2" id="pw" name="pw" required>
+        <input type="password" class="form-control w-25 me-2" id="password" name="password" required>
+    </div>
 
+    <div class="mb-3 form-check">
+        {{ form.passwordexpiry(class="form-check-input") }}
+        {{ form.passwordexpiry.label(class="form-check-label") }}
+        {% if form.passwordexpiry.errors %}
+        <div class="text-danger">
+            {% for error in form.passwordexpiry.errors %}
+            {{ error }}<br>
+            {% endfor %}
+        </div>
+        {% endif %}
     </div>
-    <div class="mb-3">
-        <input type="checkbox" id="pwexpiry" name="pwexpiry">
-        <label for="pwexpiry">Password expires?</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Save Credentials</button>
+
+    {{ form.submit(class="btn btn-primary") }}
 </form>
 {% endblock %}
 {% block scripts %}
