--- a/templates/addtest_traceroute.html
+++ b/templates/addtest_traceroute.html
@@ -33,11 +33,11 @@
     </div>
 
     <div class="mb-3">
-        {{ form.test_testtext.label(class="form-label") }}
-        {{ form.test_testtext(class="form-control w-25") }}
-        {% if form.test_testtext.errors %}
+        {{ form.test_description.label(class="form-label") }}
+        {{ form.test_description(class="form-control w-25") }}
+        {% if form.test_description.errors %}
         <div class="text-danger">
-            {% for error in form.test_testtext.errors %}
+            {% for error in form.test_description.errors %}
             {{ error }}<br>
             {% endfor %}
         </div>
