--- a/templates/bgpaspathtests.html
+++ b/templates/bgpaspathtests.html
@@ -20,11 +20,11 @@
         {% for test in bgpaspathtests %}
         <tr>
             <td>{{ test.id }}</td>
-            <td>{{ test.devicehostname.devicehostname }}</td>
-            <td>{{ test.testprefix }}</td>
-            <td>{{ test.checkASinpath }}</td>
-            <td>{{ test.checkASwantresult }} </td>
-            <td>{{ test.testtext }} </td>
+            <td>{{ test.devicehostname.hostname }}</td>
+            <td>{{ test.testipv4prefix }}</td>
+            <td>{{ test.checkasinpath }}</td>
+            <td>{{ test.checkaswantresult }} </td>
+            <td>{{ test.description }} </td>
             <td>
                 <button class="delete-test" data-id="{{ test.id }}" style="background: none; border: none; padding: 0;">
                     <i class="fas fa-trash-alt"></i>
